assets/styles/desktop.css
.cover-section{
    
    min-height: 550px;
}


.introduction-container{
    min-height: 500px;
    max-height: 700px;
}

.self-introduction-section{
    min-height: 875px;
    max-height: 1100px;
}


.self-introduction-section__title{
    margin: 60px 0;
}

.self-introduction-section__description{
    margin-right: 60px;
    max-width: 1200px;
    margin-bottom: 60px;
}

.self-introduction-section__skills{
    margin-bottom: 60px;
}

.self-introduction-section__skills th{
    margin-bottom: 60px;
}

.self-introduction-section__button{
    height: 60px;
}

.projects-section{
    min-height: 850px;
    max-height: 1200px;
}

.projects-section__title{
    margin: 60px auto;
}

.projects-section__grid{
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 175px 175px 175px ;
    grid-gap: 40px 90px;
    margin: 0 15px;
}

.project{
    max-width: 420px;
}

.project__title{
    padding: 0 45px;
}

.project__description{
    padding: 0 45px;
}

.contact-section{
    min-height: 800px;
    max-height: 1200px;
}

.contact-section__title{
    margin: 60px auto;
}

.contact-section span{
    margin: 60px auto;
}

.contact-section span:nth-child(3){
    
    margin: 60px auto;
}

.contact-section span:nth-child(3) a{
    line-height: 60px;
}


.contact-section__logo-container{
    margin: 60px auto;
    
}

